--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,17 @@
-<link rel="stylesheet" href="/bundle.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
-<h1><strong>Meghna x Kshitij  1.0</strong></h1>
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/bundle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
+    <title>MEGHNA AND KSHITIJ GETTING MARRIED WAHOOOOO WE DID IT we did it wow</title>
+  </head>
+  <body>
+    <h1><strong>Meghna x Kshitij  1.0</strong></h1>
 <h2>Wedding Details For Friends</h2>
 <p>Hello! Here is some info for our upcoming NUPTIALS. This document will continue to be updated.</p>
 <p>The “formal events” are  on 7/3 &amp; 7/4, with additional casual hangs all weekend. See schedule below.</p>
@@ -128,3 +137,6 @@ One will find a new home on K&amp;M’s wedding book shelf and the other will go
 </tr>
 </tbody>
 </table>
+
+  </body>
+</html>
