--- a/public/index.html
+++ b/public/index.html
@@ -28,17 +28,17 @@
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left"><strong>7/3/2025</strong> 4:00pm \– 10:00pm</td>
+<td style="text-align:left"><strong>7/3/2025</strong> 4pm - 10pm</td>
 <td style="text-align:left">👰🏾‍♀️🤵🏾‍♂️ Wedding</td>
 <td style="text-align:left"><a href="https://www.ebparks.org/reservations/event-venues/beach-house">Temescal Beach House</a>, Oakland CA</td>
 </tr>
 <tr>
-<td style="text-align:left"><strong>7/4/2025</strong> 6 pm - 10 pm</td>
+<td style="text-align:left"><strong>7/4/2025</strong> 6pm - 10pm</td>
 <td style="text-align:left">🎭 Sangeet aka A Friend Talent Show</td>
 <td style="text-align:left"><a href="https://g.co/kgs/BzkusMH">Live Oak Community Center</a>, Berkeley CA</td>
 </tr>
 <tr>
-<td style="text-align:left"><strong>7/5/2025</strong> 11 am - 3 pm</td>
+<td style="text-align:left"><strong>7/5/2025</strong> 11am - 3pm</td>
 <td style="text-align:left">🧺☀️🍷 Picnic! (unofficial)</td>
 <td style="text-align:left">Cragmont Park, Berkeley, CA</td>
 </tr>
@@ -71,7 +71,7 @@ Indoor &amp; outdoor venue.</p>
 <h3>🎭<br/>Sangeet</h3>
 <h6><em>aka A Friend Talent Show</em></h6>
 <h6><strong>7/4/2025</strong></h6>
-<h6><em>6 pm - 10 pm</em></h6>
+<h6><em>6:00 pm - 10:00 pm</em></h6>
 <h6><a href="https://g.co/kgs/BzkusMH">Live Oak Community Center</a>, Berkeley CA</h6>
 <h5>Vibe</h5>
 <p>Dressy casual.</p>
@@ -89,7 +89,7 @@ Indoor &amp; outdoor venue.</p>
 </ul>
 <h3>🧺☀️🍷<br/>Picnic (Unofficial)</h3>
 <h6><strong>7/5/2025</strong></h6>
-<h6>11 am - 3 pm</h6>
+<h6>11:00 am - 3:00 pm</h6>
 <h6>Cragmont Park, Berkeley, CA</h6>
 <h5>Vibe</h5>
 <p>Casual.</p>
@@ -118,6 +118,10 @@ a swap pile at our Sangeet. You’ll get to go home with a book 💜.</p>
 <p>Text us and we’ll add to this section.</p>
 <h4>Do I have to come to every event?</h4>
 <p>No. But tell us if you’re coming to the wedding so we have your headcount for the caterer.</p>
+<h4>What about the India wedding?</h4>
+<p>There will be one! Probably in Jan or Feb 2026. We're figuring out the details and will reach out soon.</p>
+<h4>Who will sing at Sangeet? Who is the talent?</h4>
+<p>You. You are the talent. You will hear from us soon.</p>
 <h4>What if I want to give you guys a non-book gift, do you have a registry?</h4>
 <p>Thank you, you dreamy person. We have no registry. If you are so moved, you could donate to of these two organizations in our names:</p>
 <table>
