add pictures of the couple

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,12 @@
   </head>
   <body>
     <h1><strong>Meghna x Kshitij  1.0</strong></h1>
+<p><img src="./IMG_1791.jpeg" alt=""></p>
 <h2>Wedding Details For Friends</h2>
 <p>Hello! Here is some info for our upcoming NUPTIALS. This document will continue to be updated.</p>
 <p>The “formal events” are  on 7/3 &amp; 7/4, with additional casual hangs all weekend. See schedule below.</p>
 <h2>Events</h2>
-<p>We’ll be hanging around all weekend and dream of spontaneous hangs and get togethers. We’re dreaming of a saturday (7/5) picnic with whoever is still around. Maybe a trip to a brewery, who knows! We imagine a world where folks are proposing and arranging their own events or explorations. The Bay 🌁 has so much to offer 💜.</p>
+<p>We’ll be hanging around all weekend and dream of spontaneous hangs and get-togethers. We’re dreaming of a saturday (7/5) picnic with whoever is still around. Maybe a trip to a brewery, who knows! We imagine a world where folks are proposing and arranging their own events or explorations. The Bay 🌁 has so much to offer 💜.</p>
 <h3>High level Calendar</h3>
 <table>
 <thead>
@@ -95,6 +96,7 @@ Indoor &amp; outdoor venue.</p>
 <p>Casual.</p>
 <h5>Dress suggestion</h5>
 <p>Literally anything.</p>
+<p><img src="./IMG_3.jpeg" alt=""></p>
 <h2>Travel &amp; Accommodations</h2>
 <h5>Flying</h5>
 <p>The closest airports are SFO and OAK. You can take the BART to Berkeley from either.</p>
@@ -142,6 +144,7 @@ a swap pile at our Sangeet. You’ll get to go home with a book 💜.</p>
 </tr>
 </tbody>
 </table>
+<p><img src="./IMG_1391.jpeg" alt=""></p>
 
   </body>
 </html>
