--- a/public/index.html
+++ b/public/index.html
@@ -135,12 +135,12 @@ a swap pile at our Sangeet. You’ll get to go home with a book 💜.</p>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">Name</td>
-<td style="text-align:left"></td>
+<td style="text-align:left"><a href="https://www.malariaconsortium.org/support-us/donate.htm">Malaria Consortium (click to donate)</a></td>
+<td style="text-align:left">They are <a href="https://www.givewell.org/charities/top-charities">GiveWell's top charity</a> because they are cost-effective and give rigorous evidence that the programs they run actually work.</td>
 </tr>
 <tr>
-<td style="text-align:left">Name</td>
-<td style="text-align:left"></td>
+<td style="text-align:left"><a href="https://wck.org/donate">World Central Kitchen (click to donate)</a></td>
+<td style="text-align:left"><a href="https://www.charitynavigator.org/ein/273521132">Charity Navigator awards them four stars</a> for their work providing food to people struck by disaster, in places including Gaza, Ukraine and Southern California.</td>
 </tr>
 </tbody>
 </table>
