--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,17 @@
     </div>
     <h1><strong>Meghna x Kshitij  1.0</strong></h1>
 <p><span class="heart-hover-image"><img src="./IMG_3.jpeg" alt=""></span></p>
-<h2>Wedding Details For Friends</h2>
-<p>Hello! Here is some info for our upcoming NUPTIALS. This document will continue to be updated.</p>
+<h2>RSVP!</h2>
+<p>Please fill out <a href="https://forms.gle/gkEnJbgXrAirQJyK9">this form</a> to tell us
+which events you're coming to and what you're doing for Sangeet!</p>
+<h2>Wedding Details For Friends and Family</h2>
+<p>Hello! Here is some info for our upcoming NUPTIALS. This document will continue
+to be updated.</p>
 <p>The &quot;formal events&quot; are  on 7/3 &amp; 7/4, with additional casual hangs all weekend. See schedule below.</p>
 <h2>Events</h2>
-<p>We'll be hanging around all weekend and dream of spontaneous hangs and get-togethers. We're dreaming of a saturday (7/5) picnic with whoever is still around. Maybe a trip to a brewery, who knows! We imagine a world where folks are proposing and arranging their own events or explorations. The Bay 🌁 has so much to offer 💜.</p>
+<p>Aside from the main events on 7/3 and 7/4, we'll be hanging around all weekend
+and dream of spontaneous hangs and get-togethers. An informal Saturday (7/5)
+picnic with whoever is still around.</p>
 <h3>High level Calendar</h3>
 <table>
 <thead>
@@ -53,8 +59,8 @@
 </tr>
 <tr>
 <td style="text-align:left"><strong>7/5/2025</strong> 11am - 3pm</td>
-<td style="text-align:left">🧺☀️🍷 Picnic! (unofficial)</td>
-<td style="text-align:left">Cragmont Park, Berkeley, CA</td>
+<td style="text-align:left">🧺☀️🍷 Picnic! (casual)</td>
+<td style="text-align:left"><a href="https://maps.app.goo.gl/AuwZqEi6EHYFj8p8A">Cragmont Park</a>, Berkeley, CA</td>
 </tr>
 </tbody>
 </table>
@@ -68,6 +74,48 @@
 provided. It will be potentially quite HOT, so lighter dress + a jacket is
 recommended. The temperatures in the Bay can drop dramatically in the evening.
 Indoor &amp; outdoor venue.</p>
+<h5>What to bring</h5>
+<p>2 copies of a book! See “Books as Gifts 📖” below.</p>
+<h5>When to arrive</h5>
+<p>Aim to arrive around 4.30pm. The Baraat -- a walk around the lake, perhaps
+accompanied by K talking about the local geology -- leaves at 5pm.</p>
+<h5>Where to park</h5>
+<p>The venue has a dedicated parking lot that fits about 15 cars. <a href="https://www.ebparks.org/reservations/event-venues/beach-house">Link</a></p>
+<h5>Event schedule</h5>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">When</th>
+<th style="text-align:left">What</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">4:30pm</td>
+<td style="text-align:left">Arrival</td>
+</tr>
+<tr>
+<td style="text-align:left">5:00pm</td>
+<td style="text-align:left">Walk around lake (Baraat)</td>
+</tr>
+<tr>
+<td style="text-align:left">5:45pm</td>
+<td style="text-align:left">Ceremony</td>
+</tr>
+<tr>
+<td style="text-align:left">6:00pm – 6:30pm</td>
+<td style="text-align:left">Book swap</td>
+</tr>
+<tr>
+<td style="text-align:left">6:30pm – 8:00pm</td>
+<td style="text-align:left">Dinner/ Speeches / Cake</td>
+</tr>
+<tr>
+<td style="text-align:left">8:00pm – 10:00pm</td>
+<td style="text-align:left">Dancing</td>
+</tr>
+</tbody>
+</table>
 <h5>Vibe</h5>
 <p>Summery, floral, cocktail  party vibes.</p>
 <h5>Dress suggestion</h5>
@@ -89,11 +137,53 @@ Indoor &amp; outdoor venue.</p>
 </tr>
 </tbody>
 </table>
+<h5>What is a Baraat?</h5>
+<p>My own experience of Baraats is this. The groom gets on a horse, or perhaps a
+chariot or an elephant if his father is rich. He is joined on his mount by a
+small child. Around the horse, on the ground, is a very loud brass band in
+uniform. Right behind are all his friends and family, dancing. The whole
+procession goes on the street. Cars honk, motorcycles swerve, the group moves
+slowly forward, continually dancing and singing, all accompanied by the band.
+They enter the wedding venue and are met by the girl's family. Then: greetings
+given, garlands exchanged, snacks served.</p>
+<p>Ours will be the same but with no horse, no chariot, no elephant, no band, no
+dancing, no street, no cars, and no motorcycles.</p>
+<p>Click <a href="https://en.wikipedia.org/wiki/Baraat">here</a> to see what Wikipedia has to say.</p>
 <h3>🎭<br/>Sangeet</h3>
-<h6><em>aka A Friend Talent Show</em></h6>
+<h6><em>aka Show and Tell, or, a Friend Talent Show</em></h6>
 <h6><strong>7/4/2025</strong></h6>
 <h6><em>6:00 pm - 10:00 pm</em></h6>
 <h6><a href="https://g.co/kgs/BzkusMH">Live Oak Community Center</a>, Berkeley CA</h6>
+<h4>Sangeet FAQ</h4>
+<h5>What is a Sangeet?</h5>
+<p>A Sangeet (<em>Sung Together</em> from Sanskrit) traditionally occurs before the
+wedding and is a time for friends and family to join together for song and
+dancing. We’re adapting it to be a kind of Show and Tell on the theme of Love,
+Change and Leaps of Faith.</p>
+<h5>Who is the talent?</h5>
+<p>You. You are the talent.</p>
+<h5>What are examples of things people are doing?</h5>
+<p>For example:</p>
+<ul>
+<li>The groom will share his Apple Notes (48 and growing) about the bride.</li>
+<li>A close friend will sing a song on guitar about remembering loved ones who
+have passed.</li>
+<li>The bride and groom will demonstrate their commitment to <em>carrying</em> each other
+through hard times.</li>
+<li>There will be a game that pits the bride's friends against the groom’s.</li>
+<li>Our friend Nolen (hi!) will juggle. Well we haven't asked him yet but we hope
+he will perform this Leap of Faith with gravity.</li>
+</ul>
+<h5>When to arrive</h5>
+<p>We’ll start the show at 6:30pm and eat around 7pm.</p>
+<h5>How to get there</h5>
+<p>You can BART to Downtown Berkeley and take 18 or 67 bus, or uber from there. Keep in mind it will be July 4!</p>
+<h5>Where to park</h5>
+<p>Live Oak Community Center  does not have onsite parking, so you will need to find street parking if you’re driving.</p>
+<h5>What to bring</h5>
+<p>Whatever you need for your show and tell!</p>
+<h5>Food</h5>
+<p>We’ll provide a casual dinner (probably pizza) and nonalcoholic beverages (the venue is alcohol free).</p>
 <h5>Vibe</h5>
 <p>Dressy casual.</p>
 <h5>Dress suggestion</h5>
@@ -132,25 +222,23 @@ Indoor &amp; outdoor venue.</p>
 <p>If u wanna be on brand on brand.</p>
 <p><img src="./image1.png" alt=""></p>
 <h2>Books As Gifts 📖</h2>
-<p>Everyone does love gifts. Here is what we'd <em>love</em> from you.</p>
-<p>Pick 1 book that has either:</p>
+<p>Everyone loves gifts. Here is what we'd <em>love</em> from you.</p>
+<p>Bring TWO copies of ONE book that has either:</p>
 <ul>
 <li>Taught you something about being a good person, or</li>
 <li>Taught you something about leading a good life.</li>
 </ul>
-<p>Include notes on why you picked what you did.</p>
-<p>Bring TWO copies.</p>
-<p>One will find a new home on K&amp;M's wedding book shelf and the other will go into
-a swap pile at our Sangeet. You'll get to go home with a book 💜.</p>
+<p>Include a note or inscription inside both copies of the book explaining why you
+picked it.</p>
+<p>One copy will find a new home on K&amp;M's wedding book shelf and the other will go
+into a swap pile at our Sangeet. You'll get to go home with a book 💜.</p>
 <h2>FAQs</h2>
-<p>Text us and we'll add to this section.</p>
+<p>More Qs? Text us and we'll add to this section.</p>
 <h4>Do I have to come to every event?</h4>
-<p>No. But tell us if you're coming to the wedding so we have your headcount for the caterer.</p>
+<p>No. But please RSVP (especially to the wedding) so we have enough food for everyone!</p>
 <h4>What about the India wedding?</h4>
 <p>There will be one! Probably in Jan or Feb 2026. We're figuring out the details and will reach out soon.</p>
-<h4>Who will sing at Sangeet? Who is the talent?</h4>
-<p>You. You are the talent. You will hear from us soon.</p>
-<h4>What if I want to give you guys a non-book gift, do you have a registry?</h4>
+<h4>What if I want to give you guys a non-book gift? Do you have a registry?</h4>
 <p>Thank you, you dreamy person. We have no registry. If you are so moved, you could donate to one of these two organizations in our names:</p>
 <table>
 <thead>
