--- a/public/index.html
+++ b/public/index.html
@@ -29,14 +29,10 @@
 <h2>RSVP!</h2>
 <p>Please fill out <a href="https://forms.gle/gkEnJbgXrAirQJyK9">this form</a> to tell us
 which events you're coming to and what you're doing for Sangeet!</p>
-<h2>Wedding Details For Friends and Family</h2>
-<p>Hello! Here is some info for our upcoming NUPTIALS. This document will continue
-to be updated.</p>
-<p>The &quot;formal events&quot; are  on 7/3 &amp; 7/4, with additional casual hangs all weekend. See schedule below.</p>
 <h2>Events</h2>
-<p>Aside from the main events on 7/3 and 7/4, we'll be hanging around all weekend
-and dream of spontaneous hangs and get-togethers. An informal Saturday (7/5)
-picnic with whoever is still around.</p>
+<p>The &quot;formal events&quot; are on 7/3 &amp; 7/4. Outside those we'll be hanging around all
+weekend and dream of spontaneous hangs and get-togethers. There will be a casual
+picnic on Saturday (7/5) with whoever is still around and wants to come.</p>
 <h3>High level Calendar</h3>
 <table>
 <thead>
