--- a/public/index.html
+++ b/public/index.html
@@ -67,9 +67,11 @@ picnic on Saturday (7/5) with whoever is still around and wants to come.</p>
 <h6><a href="https://www.ebparks.org/reservations/event-venues/beach-house">Temescal Beach House</a>, Oakland CA</h6>
 <br/>
 <p>The wedding will run from mid-afternoon into the evening, with dinner and cake
-provided. It will be potentially quite HOT, so lighter dress + a jacket is
-recommended. The temperatures in the Bay can drop dramatically in the evening.
-Indoor &amp; outdoor venue.</p>
+provided. Check <a href="https://www.accuweather.com/en/us/berkeley/94704/daily-weather-forecast/332044?day=32">the
+weather</a>!
+It can go from quite hot during the day to cool at night. We recommend lighter
+clothing and bringing a jacket. The venue has both indoor and outdoor parts and
+we'll move between them.</p>
 <h5>What to bring</h5>
 <p>2 copies of a book! See “Books as Gifts 📖” below.</p>
 <h5>When to arrive</h5>
