--- a/public/index.html
+++ b/public/index.html
@@ -156,12 +156,11 @@ dancing, no street, no cars, and no motorcycles.</p>
 <h5>What is a Sangeet?</h5>
 <p>A Sangeet (<em>Sung Together</em> from Sanskrit) traditionally occurs before the
 wedding and is a time for friends and family to join together for song and
-dancing. We’re adapting it to be a kind of Show and Tell on the theme of Love,
-Change and Leaps of Faith.</p>
+dance. We’re adapting it to be a Show and Tell on the theme of Love, Change and
+Leaps of Faith.</p>
 <h5>Who is the talent?</h5>
 <p>You. You are the talent.</p>
 <h5>What are examples of things people are doing?</h5>
-<p>For example:</p>
 <ul>
 <li>The groom will share his Apple Notes (48 and growing) about the bride.</li>
 <li>A close friend will sing a song on guitar about remembering loved ones who
@@ -175,9 +174,11 @@ he will perform this Leap of Faith with gravity.</li>
 <h5>When to arrive</h5>
 <p>We’ll start the show at 6:30pm and eat around 7pm.</p>
 <h5>How to get there</h5>
-<p>You can BART to Downtown Berkeley and take 18 or 67 bus, or uber from there. Keep in mind it will be July 4!</p>
+<p>You can BART to Downtown Berkeley and take the 18 or 67 bus, or Uber from there.
+Keep in mind it will be July 4!</p>
 <h5>Where to park</h5>
-<p>Live Oak Community Center  does not have onsite parking, so you will need to find street parking if you’re driving.</p>
+<p>Live Oak Community Center does not have onsite parking, so you will need to find
+street parking if you’re driving.</p>
 <h5>What to bring</h5>
 <p>Whatever you need for your show and tell!</p>
 <h5>Food</h5>
