--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@ picnic on Saturday (7/5) with whoever is still around and wants to come.</p>
 <tr>
 <td style="text-align:left"><strong>7/5/2025</strong> 11am - 3pm</td>
 <td style="text-align:left">🧺☀️🍷 Picnic! (casual)</td>
-<td style="text-align:left"><a href="https://maps.app.goo.gl/AuwZqEi6EHYFj8p8A">Cragmont Park</a>, Berkeley, CA</td>
+<td style="text-align:left"><a href="https://maps.app.goo.gl/AuwZqEi6EHYFj8p8A">Cragmont Rock Park</a>, Berkeley, CA</td>
 </tr>
 </tbody>
 </table>
@@ -64,7 +64,7 @@ picnic on Saturday (7/5) with whoever is still around and wants to come.</p>
 <h3>👰🏾‍♀️🤵🏾‍♂️<br/>Wedding</h3>
 <h6><strong>7/3/2025</strong></h6>
 <h6><em>4:00pm – 10:00pm</em></h6>
-<h6><a href="https://www.ebparks.org/reservations/event-venues/beach-house">Temescal Beach House</a>, Oakland CA</h6>
+<h6><a href="https://www.ebparks.org/reservations/event-venues/beach-house">Temescal Beach House</a>, Oakland, CA</h6>
 <br/>
 <p>The wedding will run from mid-afternoon into the evening, with dinner and cake
 provided. Check <a href="https://www.accuweather.com/en/us/berkeley/94704/daily-weather-forecast/332044?day=32">the
@@ -151,7 +151,7 @@ dancing, no street, no cars, and no motorcycles.</p>
 <h6><em>aka Show and Tell, or, a Friend Talent Show</em></h6>
 <h6><strong>7/4/2025</strong></h6>
 <h6><em>6:00 pm - 10:00 pm</em></h6>
-<h6><a href="https://g.co/kgs/BzkusMH">Live Oak Community Center</a>, Berkeley CA</h6>
+<h6><a href="https://g.co/kgs/BzkusMH">Live Oak Community Center</a>, Berkeley, CA</h6>
 <h4>Sangeet FAQ</h4>
 <h5>What is a Sangeet?</h5>
 <p>A Sangeet (<em>Sung Together</em> from Sanskrit) traditionally occurs before the
@@ -207,7 +207,7 @@ street parking if you’re driving.</p>
 <h3>🧺☀️🍷<br/>Picnic (Unofficial)</h3>
 <h6><strong>7/5/2025</strong></h6>
 <h6>11:00 am - 3:00 pm</h6>
-<h6>Cragmont Park, Berkeley, CA</h6>
+<h6><a href="https://maps.app.goo.gl/AuwZqEi6EHYFj8p8A">Cragmont Rock Park</a>, Berkeley, CA</h6>
 <h5>Vibe</h5>
 <p>Casual.</p>
 <h5>Dress suggestion</h5>
