--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@ picnic on Saturday (7/5) with whoever is still around and wants to come.</p>
 </tr>
 <tr>
 <td style="text-align:left"><strong>7/4/2025</strong> 6pm - 10pm</td>
-<td style="text-align:left">🎭 Sangeet aka A Friend Talent Show</td>
+<td style="text-align:left">🎭 Sangeet aka Show and Tell</td>
 <td style="text-align:left"><a href="https://g.co/kgs/BzkusMH">Live Oak Community Center</a>, Berkeley CA</td>
 </tr>
 <tr>
