--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@ picnic on Saturday (7/5) with whoever is still around and wants to come.</p>
 <h6><a href="https://www.ebparks.org/reservations/event-venues/beach-house">Temescal Beach House</a>, Oakland, CA</h6>
 <br/>
 <p>The wedding will run from mid-afternoon into the evening, with dinner and cake
-provided. Check <a href="https://www.accuweather.com/en/us/berkeley/94704/daily-weather-forecast/332044?day=32">the
+provided. Check <a href="https://www.accuweather.com/en/us/berkeley/94704/daily-weather-forecast/332044">the
 weather</a>!
 It can go from quite hot during the day to cool at night. We recommend lighter
 clothing and bringing a jacket. The venue has both indoor and outdoor parts and
@@ -204,10 +204,14 @@ street parking if you’re driving.</p>
 </tr>
 </tbody>
 </table>
-<h3>🧺☀️🍷<br/>Picnic (Unofficial)</h3>
+<h3>🧺☀️🍷<br/>Picnic (Casual)</h3>
 <h6><strong>7/5/2025</strong></h6>
 <h6>11:00 am - 3:00 pm</h6>
 <h6><a href="https://maps.app.goo.gl/AuwZqEi6EHYFj8p8A">Cragmont Rock Park</a>, Berkeley, CA</h6>
+<h5>How to get there</h5>
+<p>We recommend taking an uber from the Downtown Berkeley bart station or carpool.</p>
+<h5>Food</h5>
+<p>We will provide pastries &amp; coffee, bring any other treats you want to share.</p>
 <h5>Vibe</h5>
 <p>Casual.</p>
 <h5>Dress suggestion</h5>
@@ -238,7 +242,9 @@ into a swap pile at our Sangeet. You'll get to go home with a book 💜.</p>
 <h4>What about the India wedding?</h4>
 <p>There will be one! Probably in Jan or Feb 2026. We're figuring out the details and will reach out soon.</p>
 <h4>What if I want to give you guys a non-book gift? Do you have a registry?</h4>
-<p>Thank you, you dreamy person. We have no registry. If you are so moved, you could donate to one of these two organizations in our names:</p>
+<p>Thank you, you dreamy person. We have no registry. If you are so moved, you
+could donate to one of these two organizations in our names. Drop us a note if
+you decide to do that!</p>
 <table>
 <thead>
 <tr>
