--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,9 @@ we'll move between them.</p>
 <p>Aim to arrive around 4.30pm. The Baraat -- a walk around the lake, perhaps
 accompanied by K talking about the local geology -- leaves at 5pm.</p>
 <h5>Where to park</h5>
-<p>The venue has a dedicated parking lot that fits about 15 cars. <a href="https://www.ebparks.org/reservations/event-venues/beach-house">Link</a></p>
+<p>The venue has a dedicated parking lot that fits about 15 cars
+(<a href="https://www.ebparks.org/reservations/event-venues/beach-house">link</a>), and
+there's also an overflow parking lot that's shared with the public.</p>
 <h5>Event schedule</h5>
 <table>
 <thead>
@@ -209,7 +211,7 @@ street parking if you’re driving.</p>
 <h6>11:00 am - 3:00 pm</h6>
 <h6><a href="https://maps.app.goo.gl/AuwZqEi6EHYFj8p8A">Cragmont Rock Park</a>, Berkeley, CA</h6>
 <h5>How to get there</h5>
-<p>We recommend taking an uber from the Downtown Berkeley bart station or carpool.</p>
+<p>We recommend taking an Uber from the Downtown Berkeley BART station or carpool.</p>
 <h5>Food</h5>
 <p>We will provide pastries &amp; coffee, bring any other treats you want to share.</p>
 <h5>Vibe</h5>
@@ -222,7 +224,7 @@ street parking if you’re driving.</p>
 <h5>Lodging</h5>
 <p>We recommend you get an AirBnb. If you're worried about finding a place to stay, hit us up and we'll find a way to house you!</p>
 <h2>Color Palette</h2>
-<p>If u wanna be <em>on-brand</em> on brand.</p>
+<p>If you wanna be <em>on-brand</em> on brand.</p>
 <p><img src="./image1.png" alt=""></p>
 <h2>Books As Gifts 📖</h2>
 <p>Everyone loves gifts. Here is what we'd <em>love</em> from you.</p>
