--- a/public/index.html
+++ b/public/index.html
@@ -236,7 +236,7 @@ street parking if you’re driving.</p>
 <p>Include a note or inscription inside both copies of the book explaining why you
 picked it.</p>
 <p>One copy will find a new home on K&amp;M's wedding book shelf and the other will go
-into a swap pile at our Sangeet. You'll get to go home with a book 💜.</p>
+into a swap pile at our Wedding. You'll get to go home with a book 💜.</p>
 <h2>FAQs</h2>
 <p>More Qs? Text us and we'll add to this section.</p>
 <h4>Do I have to come to every event?</h4>
