added wedding google map

--- a/public/index.html
+++ b/public/index.html
@@ -128,6 +128,7 @@ Indoor &amp; outdoor venue.</p>
 <p>The closest airports are SFO and OAK. You can take the BART to Berkeley from either.</p>
 <h5>Lodging</h5>
 <p>We recommend you get an AirBnb. If you're worried about finding a place to stay, hit us up and we'll find a way to house you!</p>
+<iframe src="https://www.google.com/maps/d/embed?mid=1AzgdRsbt6KYKCnnLI-brPKDLTNSzFbM&ehbc=2E312F" width="640" height="480"></iframe>
 <h2>Color Palette</h2>
 <p>If u wanna be on brand on brand.</p>
 <p><img src="./image1.png" alt=""></p>
