--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,8 @@ we'll move between them.</p>
 <h5>When to arrive</h5>
 <p>Aim to arrive around 4.30pm. The Baraat -- a walk around the lake, perhaps
 accompanied by K talking about the local geology -- leaves at 5pm.</p>
+<h5>How to get there</h5>
+<p>You can drive or Uber.</p>
 <h5>Where to park</h5>
 <p>The venue has a dedicated parking lot that fits about 15 cars
 (<a href="https://www.ebparks.org/reservations/event-venues/beach-house">link</a>), and
@@ -176,8 +178,9 @@ he will perform this Leap of Faith with gravity.</li>
 <h5>When to arrive</h5>
 <p>We’ll start the show at 6:30pm and eat around 7pm.</p>
 <h5>How to get there</h5>
-<p>You can BART to Downtown Berkeley and take the 18 or 67 bus, or Uber from there.
-Keep in mind it will be July 4!</p>
+<p>If you're in East Bay or San Francisco, you can Uber directly or you can take
+BART to Downtown Berkeley. From there take the 18 or 67 bus, or Uber. Keep in
+mind it will be July 4!</p>
 <h5>Where to park</h5>
 <p>Live Oak Community Center does not have onsite parking, so you will need to find
 street parking if you’re driving.</p>
@@ -221,6 +224,8 @@ street parking if you’re driving.</p>
 <h2>Travel &amp; Accommodations</h2>
 <h5>Flying</h5>
 <p>The closest airports are SFO and OAK. You can take the BART to Berkeley from either.</p>
+<h5>Getting around</h5>
+<p>It's easy to get around with Uber and BART, so you don't need to rent a car unless you really want to.</p>
 <h5>Lodging</h5>
 <p>We recommend you get an AirBnb. If you're worried about finding a place to stay, hit us up and we'll find a way to house you!</p>
 <h2>Color Palette</h2>
