added spotify playlist

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ It can go from quite hot during the day to cool at night. We recommend lighter
 clothing and bringing a jacket. The venue has both indoor and outdoor parts and
 we'll move between them.</p>
 <h5>What to bring</h5>
-<p>2 copies of a book! See “Books as Gifts 📖” below.</p>
+<p>2 copies of a book! See &quot;Books as Gifts 📖&quot; below.</p>
 <h5>When to arrive</h5>
 <p>Aim to arrive around 4.30pm. The Baraat -- a walk around the lake, perhaps
 accompanied by K talking about the local geology -- leaves at 5pm.</p>
@@ -160,7 +160,7 @@ dancing, no street, no cars, and no motorcycles.</p>
 <h5>What is a Sangeet?</h5>
 <p>A Sangeet (<em>Sung Together</em> from Sanskrit) traditionally occurs before the
 wedding and is a time for friends and family to join together for song and
-dance. We’re adapting it to be a Show and Tell on the theme of Love, Change and
+dance. We're adapting it to be a Show and Tell on the theme of Love, Change and
 Leaps of Faith.</p>
 <h5>Who is the talent?</h5>
 <p>You. You are the talent.</p>
@@ -171,23 +171,23 @@ Leaps of Faith.</p>
 have passed.</li>
 <li>The bride and groom will demonstrate their commitment to <em>carrying</em> each other
 through hard times.</li>
-<li>There will be a game that pits the bride's friends against the groom’s.</li>
+<li>There will be a game that pits the bride's friends against the groom's.</li>
 <li>Our friend Nolen (hi!) will juggle. Well we haven't asked him yet but we hope
 he will perform this Leap of Faith with gravity.</li>
 </ul>
 <h5>When to arrive</h5>
-<p>We’ll start the show at 6:30pm and eat around 7pm.</p>
+<p>We'll start the show at 6:30pm and eat around 7pm.</p>
 <h5>How to get there</h5>
 <p>If you're in East Bay or San Francisco, you can Uber directly or you can take
 BART to Downtown Berkeley. From there take the 18 or 67 bus, or Uber. Keep in
 mind it will be July 4!</p>
 <h5>Where to park</h5>
 <p>Live Oak Community Center does not have onsite parking, so you will need to find
-street parking if you’re driving.</p>
+street parking if you're driving.</p>
 <h5>What to bring</h5>
 <p>Whatever you need for your show and tell!</p>
 <h5>Food</h5>
-<p>We’ll provide a casual dinner (probably pizza) and nonalcoholic beverages (the venue is alcohol free).</p>
+<p>We'll provide a casual dinner (probably pizza) and nonalcoholic beverages (the venue is alcohol free).</p>
 <h5>Vibe</h5>
 <p>Dressy casual.</p>
 <h5>Dress suggestion</h5>
@@ -232,6 +232,10 @@ street parking if you’re driving.</p>
 <h2>Color Palette</h2>
 <p>If you wanna be <em>on-brand</em> on brand.</p>
 <p><img src="./image1.png" alt=""></p>
+<h2>Spotify Playlist 👩🏾‍🎤🪩</h2>
+<p>Contribute to our spotify dance playlist. We are the djs and we need your help.</p>
+<p><a href="https://open.spotify.com/playlist/201epROj2lysmoitbYMajw?si=0bd0bc88f5f1480c&pt=fdf4d82a22d4efefe339c92120fe047f" > Add some tracks </a></p>
+<img src="kdances.gif" alt="Kshitij dancing" style="width: 100%; max-width: 320px; margin-top: 1em;">
 <h2>Books As Gifts 📖</h2>
 <p>Everyone loves gifts. Here is what we'd <em>love</em> from you.</p>
 <p>Bring TWO copies of ONE book that has either:</p>
