--- a/public/index.html
+++ b/public/index.html
@@ -256,6 +256,9 @@ picked it.</p>
 into a swap pile at our Wedding. You'll get to go home with a book 💜.</p>
 <h2>FAQs</h2>
 <p>More Qs? Text us and we'll add to this section.</p>
+<h4>Can my kids come?</h4>
+<p>Yes! Children are welcome! Mother Nature put the wiggle in children, so don't
+feel like you have to suppress it at our event.</p>
 <h4>Do I have to come to every event?</h4>
 <p>No. But please <a href="https://forms.gle/gkEnJbgXrAirQJyK9">RSVP</a> (especially to the wedding) so we have enough food for everyone!</p>
 <h4>What about the India wedding?</h4>
