updated with a today detail card for wedding

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,73 @@
       <nav id="side-panel-nav"></nav>
     </div>
     <h1><strong>Meghna x Kshitij  1.0</strong></h1>
+<div class="details-card">
+  <h1 class="card-title">Today: 👰🏾‍♀️🤵🏾‍♂️ Wedding</h1>
+  <div class="card-content">
+    <div class="info-section">
+      <h4 class="section-header">📍 Time and Place</h4>
+      <ul class="info-list">
+        <li><strong>Venue:</strong> Temescal Beach House, at Temescal Regional Recreation Area, 6500 Broadway, Oakland, CA 94618</li>
+        <li><strong>Arrive:</strong> 4:30pm, we will take a short walk at 5pm</li>
+        <li><strong>Google Maps:</strong> <a href="https://maps.app.goo.gl/EYqpNPBQuh2G5VFg8" target="_blank">Venue Location</a></li>
+        <li><strong>Parking:</strong> <a href="https://maps.app.goo.gl/4E5nuzoPmTZMYCou9" target="_blank">Reserved Lot</a> (if full, use <a href="https://maps.app.goo.gl/w9DqjxVKBDdCRqjr6" target="_blank">Public Lot</a>)</li>
+      </ul>
+    </div>
+<p><div class="info-section">
+<h4 class="section-header">🥻 Clothing</h4>
+<ul class="info-list">
+<li>Wear shoes you can walk and dance in; there will be ~15min of walking on a paved path on the side of the lake, and there will be dancing 💃🏽🕺🏾</li>
+<li>Bring a warm jacket because the temperature will drop in the evening 🥶</li>
+</ul>
+</div></p>
+<p><div class="info-section">
+<h4 class="section-header">🌤️ Weather</h4>
+<ul class="info-list">
+<li>High of 68°F at 4:30pm</li>
+<li>Gets down to 55°F at 10pm 🥶</li>
+<li><strong>Bring WARM clothes!</strong></li>
+</ul>
+</div></p>
+<p><div class="info-section">
+<h4 class="section-header">📖 Book Swap</h4>
+<ul class="info-list">
+<li>Inscribe one of the copies of your book with your name and a message for us</li>
+<li>Bring your books to the Book Table on the patio outdoors. Put our copy between the bookends. Put the other copy in the guest pile</li>
+<li>After the ceremony, book swap! Pick a copy of a book from another guest</li>
+</ul>
+</div></p>
+<p><div class="info-section">
+<h4 class="section-header">📸 Guest Book</h4>
+<ul class="info-list">
+<li>Also after the ceremony, instax guestbook! Take a picture using one of the instax cameras, put it in the album and write a lil message for us!</li>
+</ul>
+</div></p>
+<p><div class="info-section">
+<h4 class="section-header">🎬 CrowdCam</h4>
+<ul class="info-list">
+<li>We'll have an old school video camera we're passing around, grab it when you see it and start recording stuff 🎬</li>
+</ul>
+</div></p>
+<p><div class="info-section">
+<h4 class="section-header">⏰ Schedule</h4>
+<ul class="info-list schedule-list">
+<li><strong>5:00pm</strong> Lake walk leaves</li>
+<li><strong>5:45pm</strong> Ceremony</li>
+<li><strong>6:25pm</strong> Appetizers</li>
+<li><strong>7:00pm</strong> Dinner</li>
+<li><strong>7:15pm</strong> Speeches</li>
+<li><strong>8:15pm</strong> Dancing starts</li>
+<li><strong>8:45pm</strong> Cake</li>
+<li><strong>9:45pm</strong> Late night snack</li>
+<li><strong>10:45pm</strong> Last call and final song</li></p>
+<p></ul>
+</div></p>
+<p><div class="info-section">
+<h4 class="section-header">💌 Questions?</h4>
+<p class="contact-note">If you have questions tomorrow, we might be busy. Please text the WhatsApp group and someone will reply 💌</p>
+</div></p>
+  </div>
+</div>
 <p><span class="heart-hover-image"><img src="./IMG_3.jpeg" alt=""></span></p>
 <h2>RSVP!</h2>
 <p>Please fill out <a href="https://forms.gle/gkEnJbgXrAirQJyK9">this form</a> to tell us
@@ -44,14 +111,14 @@ picnic on Saturday (7/5) with whoever is still around and wants to come.</p>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left"><strong>7/3/2025</strong> 4pm - 10pm</td>
+<td style="text-align:left"><strong>7/3/2025</strong> 4:30pm - 10:45pm</td>
 <td style="text-align:left">👰🏾‍♀️🤵🏾‍♂️ Wedding</td>
 <td style="text-align:left"><a href="https://www.ebparks.org/reservations/event-venues/beach-house">Temescal Beach House</a>, Oakland CA</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>7/4/2025</strong> 6pm - 10pm</td>
 <td style="text-align:left">🎭 Sangeet aka Show and Tell</td>
-<td style="text-align:left"><a href="https://g.co/kgs/BzkusMH">Live Oak Community Center</a>, Berkeley CA</td>
+<td style="text-align:left"><a href="https://maps.app.goo.gl/xYpbKukNdbr5NUtE6?g_st=ipc">Live Oak Community Center</a>, Berkeley CA</td>
 </tr>
 <tr>
 <td style="text-align:left"><strong>7/5/2025</strong> 11am - 3pm</td>
@@ -63,7 +130,7 @@ picnic on Saturday (7/5) with whoever is still around and wants to come.</p>
 <p><img src="./IMG_1791.jpeg" alt=""></p>
 <h3>👰🏾‍♀️🤵🏾‍♂️<br/>Wedding</h3>
 <h6><strong>7/3/2025</strong></h6>
-<h6><em>4:00pm – 10:00pm</em></h6>
+<h6><em>4:30pm – 10:45pm</em></h6>
 <h6><a href="https://www.ebparks.org/reservations/event-venues/beach-house">Temescal Beach House</a>, Oakland, CA</h6>
 <br/>
 <p>The wedding will run from mid-afternoon into the evening, with dinner and cake
@@ -75,8 +142,7 @@ we'll move between them.</p>
 <h5>What to bring</h5>
 <p>2 copies of a book! See &quot;Books as Gifts 📖&quot; below.</p>
 <h5>When to arrive</h5>
-<p>Aim to arrive around 4.30pm. The Baraat -- a walk around the lake, perhaps
-accompanied by K talking about the local geology -- leaves at 5pm.</p>
+<p>Aim to arrive around 4.30pm. The Baraat -- a walk around the lake leaves at 5pm.</p>
 <h5>How to get there</h5>
 <p>You can drive or Uber.</p>
 <h5>Where to park</h5>
@@ -155,7 +221,7 @@ dancing, no street, no cars, and no motorcycles.</p>
 <h6><em>aka Show and Tell, or, a Friend Talent Show</em></h6>
 <h6><strong>7/4/2025</strong></h6>
 <h6><em>6:00 pm - 10:00 pm</em></h6>
-<h6><a href="https://g.co/kgs/BzkusMH">Live Oak Community Center</a>, Berkeley, CA</h6>
+<h6><a href="https://maps.app.goo.gl/xYpbKukNdbr5NUtE6?g_st=ipc">Live Oak Community Center</a>, Berkeley, CA</h6>
 <h4>Sangeet FAQ</h4>
 <h5>What is a Sangeet?</h5>
 <p>A Sangeet (<em>Sung Together</em> from Sanskrit) traditionally occurs before the
@@ -241,7 +307,7 @@ street parking if you're driving.</p>
 <p><img src="./image1.png" alt=""></p>
 <h2>Spotify Playlist 👩🏾‍🎤🪩</h2>
 <p>Contribute to our spotify dance playlist. We are the djs and we need your help.</p>
-<p><a href="https://open.spotify.com/playlist/201epROj2lysmoitbYMajw?si=0bd0bc88f5f1480c&pt=fdf4d82a22d4efefe339c92120fe047f" > Add some tracks </a></p>
+<p><a href="https://open.spotify.com/playlist/201epROj2lysmoitbYMajw?si=cca80bfd3f9e4779&pt=5ac37b0fc044e44ebbdbc0c59e02e89a" > Add some tracks </a></p>
 <img src="kdances.gif" alt="Kshitij dancing" style="width: 100%; max-width: 320px; margin-top: 1em;">
 <h2>Books As Gifts 📖</h2>
 <p>Everyone loves gifts. Here is what we'd <em>love</em> from you.</p>
